# chip8

./: Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
src/: display.rs  main.rs
src/debugger/: disassembler.rs  mod.rs  state.rs  ui.rs
src/internal/: audio.rs  chip8.rs  cpu.rs  display.rs  font.rs  graphics.rs  keypad.rs  mod.rs
