[package]
name = "chip8"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.0"
rodio = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sdl2 = { version = "0.37", features = ["bundled"] }
glow = "0.14"
imgui = "0.12"
imgui-sdl2-support = "0.13"
imgui-glow-renderer = "0.13"
